Fix ProductServiceImpl hidden test